# Rust-Scraper

./: Cargo.toml  LICENSE  config.toml  test.xml
src/: birdup.rs  main.rs  xml_messing_around.rs
src/code_generator/: mod.rs
src/config/: mod.rs  types.rs
src/xml_parsing/: mod.rs  types.rs
