[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
reqwest = { version = "0.12.4", features = ["json"] }
scraper = "0.19.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }